--- a/lab1/Lab1-Part2-Team30.html
+++ b/lab1/Lab1-Part2-Team30.html
@@ -53,14 +53,17 @@
             <tr>
                 <td>
                     <form method="post" action="">
-                        <input type="radio" id="fadeIn" name="fade" class="fade1text" value="in1">
-                        <label for="fadeIn">Fade In Text</label>
-                        <input type="radio" id="fadeIn" name="fade" class="fade1" value="in1">
-                        <label for="fadeIn">Fade In Image</label><br>
-                        <input type="radio" id="fadeOut" name="fade" class="fade1text" value="out1">
-                        <label for="fadeOut">Fade Out Text</label>
-                        <input type="radio" id="fadeOut" name="fade" class="fade1" value="out1">
-                        <label for="fadeOut">Fade Out Image</label>
+                        <input type="radio" id="fadeIn1" name="fade" class="fade1text" value="in1">
+                        <label for="fadeIn1">Fade In Text</label>
+						<br>
+                        <input type="radio" id="fadeIn2" name="fade" class="fade1" value="in1">
+                        <label for="fadeIn2">Fade In Image</label>
+						<br>
+                        <input type="radio" id="fadeOut3" name="fade" class="fade1text" value="out1">
+                        <label for="fadeOut3">Fade Out Text</label>
+						<br>
+                        <input type="radio" id="fadeOut4" name="fade" class="fade1" value="out1">
+                        <label for="fadeOut4">Fade Out Image</label>
                     </form>
                 </td>
                 <td><img src="img/laptop.jpg" id="img1"></img></td>
@@ -78,14 +81,17 @@
             <tr>
                 <td>
                     <form method="post" action="">
-                        <input type="radio" id="fadeIn" name="fade" class="fade2text" value="in2">
-                        <label for="fadeIn">Fade In Text</label>
-                        <input type="radio" id="fadeIn" name="fade" class="fade2" value="in2">
-                        <label for="fadeIn">Fade In Image</label><br>
-                        <input type="radio" id="fadeOut" name="fade" class="fade2text" value="out2">
-                        <label for="fadeOut">Fade Out Text</label>
-                        <input type="radio" id="fadeOut" name="fade" class="fade2" value="out2">
-                        <label for="fadeOut">Fade Out Image</label>
+                        <input type="radio" id="fadeIn5" name="fade" class="fade2text" value="in2">
+                        <label for="fadeIn5">Fade In Text</label>
+						<br>
+                        <input type="radio" id="fadeIn6" name="fade" class="fade2" value="in2">
+                        <label for="fadeIn6">Fade In Image</label>
+						<br>
+                        <input type="radio" id="fadeOut7" name="fade" class="fade2text" value="out2">
+                        <label for="fadeOut7">Fade Out Text</label>
+						<br>
+                        <input type="radio" id="fadeOut8" name="fade" class="fade2" value="out2">
+                        <label for="fadeOut8">Fade Out Image</label>
                     </form>
                 </td>
                 <td><img src="img/s20.jpg" id="img2"></img></td>
@@ -103,14 +109,17 @@
             <tr>
                 <td>
                     <form method="post" action="">
-                        <input type="radio" id="fadeIn" name="fade" class="fade3text" value="in3">
-                        <label for="fadeIn">Fade In Text</label>
-                        <input type="radio" id="fadeIn" name="fade" class="fade3" value="in3">
-                        <label for="fadeIn">Fade In Image</label><br>
-                        <input type="radio" id="fadeOut" name="fade" class="fade3text" value="out3">
-                        <label for="fadeOut">Fade Out Text</label>
-                        <input type="radio" id="fadeOut" name="fade" class="fade3" value="out3">
-                        <label for="fadeOut">Fade Out Image</label>
+                        <input type="radio" id="fadeIn9" name="fade" class="fade3text" value="in3">
+                        <label for="fadeIn9">Fade In Text</label>
+						<br>
+                        <input type="radio" id="fadeIn10" name="fade" class="fade3" value="in3">
+                        <label for="fadeIn10">Fade In Image</label>
+						<br>
+                        <input type="radio" id="fadeOut11" name="fade" class="fade3text" value="out3">
+                        <label for="fadeOut11">Fade Out Text</label>
+						<br>
+                        <input type="radio" id="fadeOut12" name="fade" class="fade3" value="out3">
+                        <label for="fadeOut12">Fade Out Image</label>
                     </form>
                 </td>
                 <td><img src="img/kindle.jpg" id="img3"></img></td>
