--- a/lab1/lab1-Part1-Team30.html
+++ b/lab1/lab1-Part1-Team30.html
@@ -53,10 +53,11 @@
             <tr>
                 <td>
                     <form method="post" action="">
-                        <input type="radio" id="fadeIn" name="fade">
-                        <label for="fadeIn">Fade In</label><br>
-                        <input type="radio" id="fadeOut" name="fade">
-                        <label for="fadeOut">Fade Out</label>
+                        <input type="radio" id="fadeIn1" name="fade">
+                        <label for="fadeIn1">Fade In</label>
+						<br>
+                        <input type="radio" id="fadeOut2" name="fade">
+                        <label for="fadeOut2">Fade Out</label>
                     </form>
                 </td>
                 <td><img src="img/laptop.jpg"></img></td>
@@ -74,10 +75,11 @@
             <tr>
                 <td>
                     <form method="post" action="">
-                        <input type="radio" id="fadeIn" name="fade">
-                        <label for="fadeIn">Fade In</label><br>
-                        <input type="radio" id="fadeOut" name="fade">
-                        <label for="fadeOut">Fade Out</label>
+                        <input type="radio" id="fadeIn3" name="fade">
+                        <label for="fadeIn3">Fade In</label>
+						<br>
+                        <input type="radio" id="fadeOut4" name="fade">
+                        <label for="fadeOut4">Fade Out</label>
                     </form>
                 </td>
                 <td><img src="img/s20.jpg"></img></td>
@@ -95,10 +97,11 @@
             <tr>
                 <td>
                     <form method="post" action="">
-                        <input type="radio" id="fadeIn" name="fade">
-                        <label for="fadeIn">Fade In</label><br>
-                        <input type="radio" id="fadeOut" name="fade">
-                        <label for="fadeOut">Fade Out</label>
+                        <input type="radio" id="fadeIn5" name="fade">
+                        <label for="fadeIn5">Fade In</label>
+						<br>
+                        <input type="radio" id="fadeOut6" name="fade">
+                        <label for="fadeOut6">Fade Out</label>
                     </form>
                 </td>
                 <td><img src="img/kindle.jpg"></img></td>
