--- a/lab1/Lab1-Part2-Team30.html
+++ b/lab1/Lab1-Part2-Team30.html
@@ -67,14 +67,14 @@
                     </form>
                 </td>
                 <td><img src="img/laptop.jpg" id="img1"></img></td>
-                <td class="text1">Surface Laptop 3</td>
-                <td class="text1">Microsoft</td>
-                <td class="text1">2019</td>
-                <td class="text1">Laptop</td>
+                <td><div class="maintainSize"> <div class="text1"> Surface Laptop 3</div></div></td>
+                <td><div class="maintainSize"> <div class="text1"> Microsoft</div></div></td>
+                <td><div class="maintainSize"> <div class="text1"> 2019</div></div></td>
+                <td><div class="maintainSize"> <div class="text1"> Laptop</div></div></td>
                 <td>
-                    <button type="button" class="button">Archive</button>
-                    <button type="button" class="button">Edit</button>
-                    <button type="button" class="button">Delete</button>
+                    <button type="button" class="button">Archive</button><br>
+                    <button type="button" class="button">Edit</button><br>
+                    <button type="button" class="button">Delete</button><br>
                     <button type="button" class="button">Collection</button>
                 </td>
             </tr>
@@ -95,14 +95,14 @@
                     </form>
                 </td>
                 <td><img src="img/s20.jpg" id="img2"></img></td>
-                <td class="text2">Samsung Galaxy S20 FE 5G</td>
-                <td class="text2">Samsung</td>
-                <td class="text2">2020</td>
-                <td class="text2">Cellphone</td>
+                <td><div class="maintainSize"> <div class="text2">Samsung Galaxy S20 FE 5G</div></div></td>
+                <td><div class="maintainSize"> <div class="text2">Samsung</div></div></td>
+                <td><div class="maintainSize"> <div class="text2">2020</div></div></td>
+                <td><div class="maintainSize"> <div class="text2">Cellphone</div></div></td>
                 <td>
-                    <button type="button" class="button">Archive</button>
-                    <button type="button" class="button">Edit</button>
-                    <button type="button" class="button">Delete</button>
+                    <button type="button" class="button">Archive</button><br>
+                    <button type="button" class="button">Edit</button><br>
+                    <button type="button" class="button">Delete</button><br>
                     <button type="button" class="button">Collection</button>
                 </td>
             </tr>
@@ -123,14 +123,14 @@
                     </form>
                 </td>
                 <td><img src="img/kindle.jpg" id="img3"></img></td>
-                <td class="text3">Kindle Oasis</td>
-                <td class="text3">Amazon</td>
-                <td class="text3">2019</td>
-                <td class="text3">Tablet</td>
+                <td><div class="maintainSize"> <div class="text3"> Kindle Oasis</td>
+                <td><div class="maintainSize"> <div class="text3">Amazon</td>
+                <td><div class="maintainSize"> <div class="text3">2019</div></div></td>
+                <td><div class="maintainSize"> <div class="text3">Tablet</div></div></td>
                 <td>
-                    <button type="button" class="button">Archive</button>
-                    <button type="button" class="button">Edit</button>
-                    <button type="button" class="button">Delete</button>
+                    <button type="button" class="button">Archive</button><br>
+                    <button type="button" class="button">Edit</button><br>
+                    <button type="button" class="button">Delete</button><br>
                     <button type="button" class="button">Collection</button>
                 </td>
             </tr>
@@ -209,6 +209,7 @@
                 $('.text3').fadeOut();
                 break;
         }
+		
     })
 </script>
 </body>
