Added animation to small object

--- a/lab1/Lab1-Part2-Team30.html
+++ b/lab1/Lab1-Part2-Team30.html
@@ -136,6 +136,8 @@
             </tr>
         </table>
     </div>
+    <button type="button" id="circle-btn">Animate Circle</button>
+    <div id="circle"></div>
 </div>
 
 <!-- bootstrap js-->
@@ -143,6 +145,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script>
+
+    $('#circle-btn').on('click', function(){
+        let height = $('#circle').css('height');
+        if (height == "60px"){
+            $("#circle").animate({height: '90px', width: '90px'}, "slow")
+        } 
+        else if (height == "90px"){
+            $("#circle").animate({height: '60px', width: '60px'}, "slow")
+        }
+    })
+
     $('.fade1').on('click', function(){
         console.log($(this).val())
         switch ($(this).val()){
