--- a/lab6/test10-controller4-n.html
+++ b/lab6/test10-controller4-n.html
@@ -1,23 +1,26 @@
  
      <!doctype html>
-    <html ng-app>
+    <html >
     <head>
                 <title>AngularJS MVC Architecture</title>
-                <script src=”lib/Angular/angular.min.js”></script>
+                <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
     </head>
-    <body>
-                <div ng-controller = “fullName”>
-                         <p>{ {Student.FName} }</p>
+    <body ng-app = "app1">
+                <div ng-controller = "fullName">
+                         <p>{{Student.FName}}</p>
                 </div>
-                <script type=”text/javascript”>
-                function fullName($scope){
-                     $scope.Student= 
+                <script type="text/javascript">
+                var app = angular.module('app1', []);
+                    app.controller('fullName', function($scope) 
+                    {
+                        $scope.Student= 
                        {
                               'FName' :   'John', 
-                              'LName' :   'Smith', 
+                              'LName' :   'Smith' 
                           
                         }
-               }
+                    });
                 </script>
     </body>
     </html>
