--- a/lab6/test7-controller3.html
+++ b/lab6/test7-controller3.html
@@ -1,20 +1,17 @@
 
-
- 
-      
-  
-
      <!DOCTYPE html> 
     <html> 
     <head> 
     <title>Controllers In AngularJS</title> 
     <script src="angular.js"></script> 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
     </head> 
 
     <body ng-app="app1"> 
     <div> Application.Controller</div> 
     <div ng-controller="cnt1"> 
-    <div> My Name ( using app.contrller): {{myName}} </div> 
+    <div> My Name ( using app.controller): {{myName}} </div> 
     </div> 
     <br/> 
 
