--- a/lab6/test0-start.html
+++ b/lab6/test0-start.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   	<title> AngularJS Test2! </title>
-	<script src="angular.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
 
 <body>
