--- a/lab6/test1-expression2.html
+++ b/lab6/test1-expression2.html
@@ -5,7 +5,7 @@
 
        <title> AngularJS Demo </title>
        <meta charset="UTF-8">
-        <script src="angular.js"></script>
+       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     </head>
    
     <body>
